# portfolio-options-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  STYLE.md  docker-compose.live-llm.yml  docker-compose.p36-t7.inert.yml  docker-compose.p36-t7.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_create_accounts.py  0003_create_cash_balances.py  0004_add_cash_balance_provenance.py  0005_create_stock_positions.py  0006_create_option_contracts.py  0007_create_option_positions.py  0008_create_broker_connections.py  0009_create_broker_accounts.py  0010_create_broker_sync_runs.py  0011_create_provider_credentials_metadata.py  0012_create_report_threads.py  0013_create_report_messages.py  0014_create_agent_runs.py  0015_create_agent_steps.py  0016_expand_encrypted_secret_ref.py  0017_add_sync_membership_to_normalized_rows.py  0018_add_account_detail_enrichment_fields.py  0019_add_option_position_tax_lots.py  0020_add_saved_artifact_to_report_threads.py  0021_broker_account_nickname.py
backend/app/: config.py  main.py
backend/app/core/: access_guard.py  config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  account.py  agent_run.py  agent_step.py  broker_account.py  broker_connection.py  broker_sync_run.py  cash_balance.py  (+8 more)
backend/tests/: README.md  agent_team_report_artifacts.py  conftest.py  live_llm_config.py  test_account_model.py  test_agent_team_report_artifacts.py  test_config.py  test_db_connection.py  test_db_session.py  test_user_account_schemas.py  test_user_model.py
(+658 files in other folders)
